Add footer by @mp97

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,78 @@
-<p>footer works!</p>
+<div class="footer">
+  <div class="disclaimer">
+    <div class="disclaimer-head">
+      <div class="disclaimer-head-icon">
+        <img src="https://ik.imagekit.io/AstralJaeger/tr:w-64,h-64,c-force/GC/favicon.png" alt="brand">
+      </div>
+      <div class="disclaimer-head-text">
+        Genshin.eu
+      </div>
+    </div>
+    <div class="disclaimer-content">
+      <strong>Genshin.eu</strong>
+      is not affiliated with or endorsed by miHoYo.
+      <strong>Genshin.eu</strong>
+      is a farming and schedule planing utility for the Genshin Impact game for PC, Switch, Playstation 4, and mobile game app on iOS and Android.
+    </div>
+  </div>
+  <div class="mylinks">
+    <div class="mylinks-head">
+      <strong>More Links</strong>
+    </div>
+    <div class="mylinks-content">
+      <ul>
+        <a href="https://ko-fi.com/T6T11B137"
+           target="_blank"
+           rel="noopener noreferrer"
+           class="footer-link">
+          Support me on Ko-Fi
+        </a>
+      </ul>
+      <ul>
+        <a href="https://discord.gg/4xJqpKfAb6"
+           target="_blank"
+           rel="noopener noreferrer"
+           class="footer-link">
+          Join us on Discord
+        </a>
+      </ul>
+      <ul>
+        <a class="footer-link" href="/privacy">
+          Privacy Policy
+        </a>
+      </ul>
+    </div>
+  </div>
+  <div class="community">
+    <div class="community-head">
+      <strong>Community Links</strong>
+    </div>
+    <div class="community-content">
+      <ul class="footer-link-item">
+        <a class="footer-link"
+           href="https://discord.gg/2UqwpAr"
+           target="_blank"
+           rel="noopener noreferrer">
+          Official Genshin Discord
+        </a>
+      </ul>
+      <ul class="footer-link-item">
+        <a class="footer-link"
+           href="https://www.reddit.com/r/Genshin_Impact/"
+           target="_blank"
+           rel="noopener noreferrer">
+          Official Genshin Reddit
+        </a>
+      </ul>
+      <ul class="footer-link-item">
+        <a class="footer-link"
+           href="https://www.facebook.com/Genshinimpact/"
+           target="_blank"
+           rel="noopener noreferrer">
+          Official Genshin Facebook
+        </a>
+      </ul>
+    </div>
+  </div>
+
+</div>
