Add todo comment to progress

--- a/src/app/progress/progress.component.html
+++ b/src/app/progress/progress.component.html
@@ -14,7 +14,7 @@
   <nz-collapse-panel nzHeader="Genshin News"
                      [nzExtra]="newsTpl"
                      nzDisabled>
-
+    <!-- TODO -->
   </nz-collapse-panel>
 </nz-collapse>
 <ng-template #newsTpl>
