--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -29,6 +29,14 @@
         </a>
       </ul>
       <ul>
+        <a href="https://www.buymeacoffee.com/AstralJaeger"
+           target="_blank"
+           rel="noopener noreferrer"
+           class="footer-link">
+          Support me on BuyMeACoffee
+        </a>
+      </ul>
+      <ul>
         <a href="https://discord.gg/4xJqpKfAb6"
            target="_blank"
            rel="noopener noreferrer"
