--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -42,19 +42,21 @@
         <div nz-col id="schedule_weapon" nzSpan="8" class="column">
           <ng-container *ngIf="weaponDayBins.get(i).length !== 0; else emptyTpl">
             <ng-container *ngFor="let src of weaponDayBins.get(i); let i = index">
-              <nz-card [nzTitle]="src.source.name ? src.source.name : src.source.id"
+              <nz-card [nzTitle]="src.source.description ? src.source.description : src.source.id"
                        [ngStyle]="{'margin-top': i === 0 ? '0' : '5px'}"
                        [nzBodyStyle]="{'padding': '0px 5px'}">
                 <nz-list nzSize="small">
-                  <nz-list-item *ngFor="let entry of src.materials | keyvalue" style="display: flex; flex-wrap: wrap">
-                    <nz-list-item-meta [nzAvatar]="'https://ik.imagekit.io/AstralJaeger/tr:w-50,h-50,c-force/GC/material_icons/' + entry.key + '.png'"></nz-list-item-meta>
-                    <nz-list-item-meta-title style="flex-grow: 2">{{ src.amounts.get(entry.key) }}x {{ localization.get(entry.key).name }}</nz-list-item-meta-title>
-                    <nz-item-meta-description>
-                      <nz-tag *ngFor="let weapon of entry.value"
-                              [ngClass]="weapon.element.toLowerCase()">
-                        {{ localization.get(weapon.id).name }}
-                      </nz-tag>
-                    </nz-item-meta-description>
+                  <nz-list-item *ngFor="let entry of src.materials | keyvalue">
+                    <div>
+                      <nz-list-item-meta [nzAvatar]="'https://ik.imagekit.io/AstralJaeger/tr:w-50,h-50,c-force/GC/material_icons/' + entry.key + '.png'"></nz-list-item-meta>
+                      <nz-list-item-meta-title >{{ src.amounts.get(entry.key) }}x {{ localization.get(entry.key).name }}</nz-list-item-meta-title>
+                      <div>
+                        <nz-tag *ngFor="let weapon of entry.value"
+                                [ngClass]="weapon.element.toLowerCase()">
+                          {{ localization.get(weapon.id).name }}
+                        </nz-tag>
+                      </div>
+                    </div>
                   </nz-list-item>
                 </nz-list>
               </nz-card>
