--- a/src/app/summary/summary.component.scss
+++ b/src/app/summary/summary.component.scss
@@ -1,27 +1,1 @@
-.anemo {
-  color: #80ffd7;
-}
-
-.cryo {
-  color: #9ff;
-}
-
-.dendro {
-  color: #80c0ff;
-}
-
-.electro {
-  color: #ffacff;
-}
-
-.geo {
-  color: #ffe699;
-}
-
-.hydro {
-  color: #80c0ff;
-}
-
-.pyro {
-  color: #f99;
-}
+@import "src/element_colors";
