Fix markup for character ascension schedule, replace x with times symbol

--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -20,17 +20,24 @@
               <ng-container *ngFor="let src of characterDayBins.get(i); let i = index">
                 <nz-card [nzTitle]="src.source.name ? src.source.name : src.source.id"
                          [ngStyle]="{'margin-top': i === 0 ? '0' : '5px'}"
-                         [nzBodyStyle]="{'padding': '0px 5px 0px 5px'}">
+                         [nzBodyStyle]="{'padding': '0px 5px 0px 5px'}"
+                         nzHoverable>
                   <nz-list nzSize="small">
                       <nz-list-item *ngFor="let entry of src.materials | keyvalue" style="display: flex; flex-wrap: wrap">
-                        <nz-list-item-meta [nzAvatar]="'https://ik.imagekit.io/AstralJaeger/tr:w-50,h-50,c-force/GC/material_icons/' + entry.key + '.png'"></nz-list-item-meta>
-                        <nz-list-item-meta-title style="flex-grow: 2">{{ src.amounts.get(entry.key) }}x {{ localization.get(entry.key).name }}</nz-list-item-meta-title>
-                        <nz-item-meta-description>
-                          <nz-tag *ngFor="let char of entry.value"
-                                  [ngClass]="char.element.toLowerCase()">
-                            {{ localization.get(char.id).name }}
+                        <div class="list-item-container">
+                          <nz-list-item-meta class="list-item-avatar"
+                                             [nzAvatar]="'https://ik.imagekit.io/AstralJaeger/tr:w-50,h-50,c-force/GC/material_icons/' + entry.key + '.png'">
+                          </nz-list-item-meta>
+                          <nz-list-item-meta-title class="list-item-title">
+                            {{ src.amounts.get(entry.key) }}<span>&#215;</span> {{ localization.get(entry.key).name }}
+                          </nz-list-item-meta-title>
+                        </div>
+                        <div class="list-item-tags">
+                          <nz-tag *ngFor="let character of entry.value"
+                                  [ngClass]="character.element.toLowerCase()">
+                            {{ localization.get(character.id).name }}
                           </nz-tag>
-                        </nz-item-meta-description>
+                        </div>
                       </nz-list-item>
                   </nz-list>
                 </nz-card>
@@ -44,7 +51,8 @@
             <ng-container *ngFor="let src of weaponDayBins.get(i); let i = index">
               <nz-card [nzTitle]="src.source.description ? src.source.description : src.source.id"
                        [ngStyle]="{'margin-top': i === 0 ? '0' : '5px'}"
-                       [nzBodyStyle]="{'padding': '0px 5px'}">
+                       [nzBodyStyle]="{'padding': '0px 5px'}"
+                       nzHoverable>
                 <nz-list nzSize="small">
                   <nz-list-item *ngFor="let entry of src.materials | keyvalue">
                     <div class="list-item-container">
@@ -52,7 +60,7 @@
                                          [nzAvatar]="'https://ik.imagekit.io/AstralJaeger/tr:w-50,h-50,c-force/GC/material_icons/' + entry.key + '.png'">
                       </nz-list-item-meta>
                       <nz-list-item-meta-title class="list-item-title">
-                        {{ src.amounts.get(entry.key) }}x {{ localization.get(entry.key).name }}
+                        {{ src.amounts.get(entry.key) }}<span>&#215;</span> {{ localization.get(entry.key).name }}
                       </nz-list-item-meta-title>
                     </div>
                     <div class="list-item-tags">
